Fix goblin icon not showing

--- a/src/components/Goblin.scss
+++ b/src/components/Goblin.scss
@@ -1,3 +1,4 @@
+
 .goblin {
   background-color: darkgreen;
   color: white;
@@ -7,6 +8,13 @@
   justify-content: center;
   align-items: center;
   border-radius: 4px;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
   &.shake {
     animation: shake 0.3s;
